updating names to rcl-echo-cloud

--- a/backend/sqs-ec2/sapien/v2/index.html
+++ b/backend/sqs-ec2/sapien/v2/index.html
@@ -4,13 +4,13 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-	<title>SapienML - COVID19-L3-Net Demo</title>
+	<title>SapienML - rcl-echo-cloud Demo</title>
 
 	<link rel="stylesheet" type="text/css"
 		href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
 
 	<link rel="stylesheet" type="text/css" href="https://tyleryasaka.github.io/semantic-ui-range/range.css">
-	<link rel="stylesheet" type="text/css" href="CLOUDFRONT/sapien/v2/sapiencovid_demo.css">
+	<link rel="stylesheet" type="text/css" href="CLOUDFRONT/sapien/v2/sapienrcl-echo-cloud_demo.css">
 	<link rel="stylesheet" type="text/css"
 		href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 
@@ -177,7 +177,7 @@
 	<script id="vertexShaderSecondPass" type="x-shader/x-vertex" src="CLOUDFRONT/vertexShaderSecondPass.js"></script>
 
 	<script type="text/javascript" src="DATAJS"></script>
-	<script type="text/javascript" src="CLOUDFRONT/sapien/v2/sapiencovid_demo.js"></script>
+	<script type="text/javascript" src="CLOUDFRONT/sapien/v2/sapienrcl-echo-cloud_demo.js"></script>
 
 	<svg version="1.1" xmlns:xlink="https://www.w3.org/1999/xlink" xmlns="https://www.w3.org/2000/svg">
 		<symbol id="logo" viewBox="0 0 997.9 128.6" fill="currentColor">
